# ChangeLog for media-gfx/potrace
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/potrace/ChangeLog,v 1.36 2011/12/09 11:36:53 naota Exp $

  09 Dec 2011; Naohiro Aota <naota@gentoo.org> potrace-1.10-r1.ebuild:
  Add ~x86-fbsd

  28 Nov 2011; Tim Harder <radhermit@gentoo.org> potrace-1.10-r1.ebuild:
  Fix autotools-utils usage (bug #392183).

  27 Nov 2011; Tim Harder <radhermit@gentoo.org> potrace-1.10-r1.ebuild:
  Build in the source tree.

  20 Nov 2011; Fabian Groffen <grobian@gentoo.org> potrace-1.10-r1.ebuild:
  Marked ~x64-macos

  20 Nov 2011; Fabian Groffen <grobian@gentoo.org> potrace-1.10-r1.ebuild:
  Fix out-of-prefix installation of docs

  16 Nov 2011; Jeroen Roovers <jer@gentoo.org> potrace-1.10-r1.ebuild:
  Marked ~hppa (bug #390671).

*potrace-1.10-r1 (15 Nov 2011)

  15 Nov 2011; Tim Harder <radhermit@gentoo.org> +potrace-1.10-r1.ebuild:
  Revbump to build/install library. Explicitly depend on zlib.

*potrace-1.10 (19 Aug 2011)

  19 Aug 2011; Tim Harder <radhermit@gentoo.org> +potrace-1.10.ebuild:
  Version bump. Update to EAPI 4.

*potrace-1.9 (14 Jan 2011)

  14 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> +potrace-1.9.ebuild:
  Version bump, bug #350000.

  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org> potrace-1.8.ebuild:
  Transfer Prefix keywords

  11 Aug 2009; Christian Faulhammer <fauli@gentoo.org> -potrace-1.7.ebuild:
  clean up

  24 Jan 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  as discussed with pva, graphics herd will co-maintain this package

  02 Oct 2008; Brent Baude <ranger@gentoo.org> potrace-1.8.ebuild:
  stable ppc, bug 239031

  30 Sep 2008; Raúl Porcel <armin76@gentoo.org> potrace-1.8.ebuild:
  alpha/ia64/x86 stable wrt #239031

  30 Sep 2008; Jeremy Olexa <darkside@gentoo.org> potrace-1.8.ebuild:
  amd64 stable, bug #239031. thanks to Chad A. Simmons (amd64 AT) for testing
