@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/potrace
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/potrace/ChangeLog,v 1.36 2011/12/09 11:36:53 naota Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/potrace/ChangeLog,v 1.37 2012/01/12 22:07:45 maekke Exp $
+
+  12 Jan 2012; Markus Meier <maekke@gentoo.org> potrace-1.10-r1.ebuild:
+  add ~arm, bug #390671
 
   09 Dec 2011; Naohiro Aota <naota@gentoo.org> potrace-1.10-r1.ebuild:
   Add ~x86-fbsd
